# brqueue

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  generate-protos.sh  readme.md
.github/: main.workflow
src/: binary.rs  client.rs  file_item_reader.rs  internal_queue_file_manager.rs  main.rs  models.rs  queue.rs  queue_server.rs  test_helpers.rs
src/authentication/: mod.rs
src/proto/: queue.pb.go  queue.proto  test.proto
src/rpc/: mod.rs  queue.rs  queue_grpc.rs  test.rs  test_grpc.rs
