[package]
name = "brqueue"
version = "0.1.0"
authors = ["Zlepper <hansen13579@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
protobuf        = "2.2.0"
uuid = { version = "0.7", features = ["v4", "serde"] }
env_logger = "0.6.0"
log = "0.4.6"
serde = "1.0.82"
bincode = "1.0.1"
serde_derive = "1.0.82"
bytes = "0.4.11"
byteorder = "1.2.7"
crossbeam = "0.6.0"
take_mut = "0.2.2"

[build-dependencies]
protoc-rust = "2.2.0"
